Use Vectors for some nnue calculations to utilise SIMD and increase speed